--- a/my-project/package.json
+++ b/my-project/package.json
@@ -13,6 +13,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "bodybuilder": "^2.2.6",
     "fs": "0.0.1-security",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
